--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#ABDAD9</color>
     <color name="colorPrimaryDark">#ABDAD9</color>
     <color name="colorAccent">#ABDAD9</color>
-    <color name="colorBackgrd">#ABDAD9</color>#1E5162
+    <color name="colorBackground">#ABDAD9</color>#1E5162
     <color name="colorText">#BB998C</color>
     <color name="colorBox">#B4D9CA</color>
 
