--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,99 +7,99 @@
     android:background="@color/colorPrimary"
     tools:context=".MainActivity">
 
+
     <TextView
-        android:layout_width="277dp"
-        android:layout_height="75dp"
+        android:id="@+id/textView"
+        android:layout_width="206dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="36dp"
         android:background="@color/colorBox"
         android:text="@string/counter"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@color/colorText"
-        android:textSize="60sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextCounter"
+        android:textSize="42sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.534" />
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextCounter"
-        android:layout_width="149dp"
-        android:layout_height="84dp"
-        android:layout_marginTop="180dp"
+        android:layout_width="130dp"
+        android:layout_height="94dp"
+        android:layout_marginTop="120dp"
         android:background="@color/colorBox"
-        android:imeOptions=""
-
+        android:imeOptions="actionDone"
+        android:importantForAutofill="no"
         android:inputType="number"
         android:maxLength="3"
         android:text="@string/zero"
         android:textAlignment="center"
         android:textColor="@color/colorText"
-        android:textSize="60sp"
-        app:layout_constraintHorizontal_bias="0.259"
+        android:textSize="45sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewCounter"
-        android:layout_width="149dp"
-        android:layout_marginTop="180dp"
-        android:layout_height="84dp"
-        android:maxLength="3"
+        android:layout_width="130dp"
+        android:layout_height="94dp"
+        android:layout_marginTop="120dp"
         android:background="@color/colorBox"
-        android:visibility="invisible"
+        android:maxLength="3"
         android:text="@string/zero"
         android:textAlignment="center"
         android:textColor="@color/colorText"
-        android:textSize="60sp"
-        app:layout_constraintHorizontal_bias="0.259"
+        android:textSize="45sp"
+        android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/buttonSetUnsetCounterValue"
+        android:layout_width="120dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="24dp"
+        android:background="@color/colorBox"
+        android:text="UNSET"
+        android:textAlignment="center"
+        android:textColor="@color/colorText"
+        android:textSize="33sp"
+        app:layout_constraintEnd_toEndOf="@+id/editTextCounter"
+        app:layout_constraintStart_toStartOf="@+id/editTextCounter"
+        app:layout_constraintTop_toBottomOf="@+id/editTextCounter" />
 
     <Button
         android:id="@+id/buttonPlusOne"
-        android:layout_width="100dp"
-        android:layout_height="89dp"
+        android:layout_width="90dp"
+        android:layout_height="80dp"
         android:background="@color/colorBox"
         android:text="@string/plusOne"
         android:textAlignment="center"
         android:textColor="@color/colorText"
-        android:textSize="45sp"
-        tools:layout_editor_absoluteX="226dp"
-        tools:layout_editor_absoluteY="175dp" />
-
-    <Button
-        android:id="@+id/buttonPlusOne"
-        android:layout_width="100dp"
-        android:layout_height="89dp"
-        android:background="@color/colorBox"
-        android:text="@string/plusOne"
-        android:textAlignment="center"
-        android:textColor="@color/colorText"
-        android:textSize="45sp"
+        android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.226"
+        app:layout_constraintHorizontal_bias="0.225"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextCounter"
-        app:layout_constraintVertical_bias="0.216" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonSetUnsetCounterValue"
+        app:layout_constraintVertical_bias="0.173" />
 
     <Button
         android:id="@+id/buttonMinusOne"
-        android:layout_width="100dp"
-        android:layout_height="89dp"
+        android:layout_width="90dp"
+        android:layout_height="80dp"
         android:layout_marginStart="40dp"
         android:background="@color/colorBox"
         android:text="@string/minusOne"
         android:textAlignment="center"
         android:textColor="@color/colorText"
-        android:textSize="45sp"
+        android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="@+id/buttonPlusOne"
         app:layout_constraintStart_toEndOf="@+id/buttonPlusOne"
         app:layout_constraintTop_toTopOf="@+id/buttonPlusOne"
@@ -107,14 +107,14 @@
 
     <Button
         android:id="@+id/buttonDataRecovery"
-        android:layout_width="100dp"
-        android:layout_height="89dp"
+        android:layout_width="90dp"
+        android:layout_height="80dp"
         android:layout_marginTop="44dp"
         android:background="@color/colorBox"
         android:text="@string/zero"
         android:textAlignment="center"
         android:textColor="@color/colorText"
-        android:textSize="45sp"
+        android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="@+id/buttonPlusOne"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/buttonPlusOne"
@@ -122,14 +122,14 @@
 
     <Button
         android:id="@+id/buttonReset"
-        android:layout_width="100dp"
-        android:layout_height="89dp"
+        android:layout_width="90dp"
+        android:layout_height="80dp"
         android:layout_marginTop="44dp"
         android:background="@color/colorBox"
         android:text="@string/zero"
         android:textAlignment="center"
         android:textColor="@color/colorText"
-        android:textSize="45sp"
+        android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="@+id/buttonMinusOne"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/buttonDataRecovery"
