--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,14 +30,14 @@
         android:layout_height="94dp"
         android:layout_marginTop="120dp"
         android:background="@color/colorBox"
+        android:hint="@string/zero"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
         android:inputType="number"
         android:maxLength="3"
-        android:text="@string/zero"
         android:textAlignment="center"
-        android:textColor="@color/colorText"
         android:textSize="45sp"
+        android:textColor="@color/colorText"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -49,13 +49,13 @@
         android:layout_height="94dp"
         android:layout_marginTop="120dp"
         android:background="@color/colorBox"
+        android:gravity="center"
         android:maxLength="3"
+        android:visibility="invisible"
         android:text="@string/zero"
-        android:textAlignment="center"
         android:textColor="@color/colorText"
         android:textSize="45sp"
         android:textStyle="bold"
-        android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -66,7 +66,7 @@
         android:layout_height="80dp"
         android:layout_marginTop="24dp"
         android:background="@color/colorBox"
-        android:text="UNSET"
+        android:text="SET"
         android:textAlignment="center"
         android:textColor="@color/colorText"
         android:textSize="33sp"
