added feature Can set customize counter value

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,9 +36,10 @@
         android:inputType="number"
         android:maxLength="3"
         android:textAlignment="center"
-        android:textSize="45sp"
         android:textColor="@color/colorText"
+        android:textSize="45sp"
         android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +52,6 @@
         android:background="@color/colorBox"
         android:gravity="center"
         android:maxLength="3"
-        android:visibility="invisible"
         android:text="@string/zero"
         android:textColor="@color/colorText"
         android:textSize="45sp"
@@ -66,7 +66,7 @@
         android:layout_height="80dp"
         android:layout_marginTop="24dp"
         android:background="@color/colorBox"
-        android:text="SET"
+        android:text="UNSET"
         android:textAlignment="center"
         android:textColor="@color/colorText"
         android:textSize="33sp"
