added feature Can set customize counter value

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
         android:inputType="number"
-        android:maxLength="3"
+        android:maxLength="4"
         android:textAlignment="center"
         android:textColor="@color/colorText"
         android:textSize="45sp"
@@ -51,7 +51,7 @@
         android:layout_marginTop="120dp"
         android:background="@color/colorBox"
         android:gravity="center"
-        android:maxLength="3"
+        android:maxLength="4"
         android:text="@string/zero"
         android:textColor="@color/colorText"
         android:textSize="45sp"
@@ -66,7 +66,7 @@
         android:layout_height="80dp"
         android:layout_marginTop="24dp"
         android:background="@color/colorBox"
-        android:text="UNSET"
+        android:text="@string/unset"
         android:textAlignment="center"
         android:textColor="@color/colorText"
         android:textSize="33sp"
