keyboard automatically closes on touch on SET Button or on Screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/counterLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
+    android:clickable="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context=".MainActivity">
 
 
@@ -31,7 +35,7 @@
         android:layout_marginTop="120dp"
         android:background="@color/colorBox"
         android:hint="@string/zero"
-        android:imeOptions="actionDone"
+        android:imeOptions="actionUnspecified"
         android:importantForAutofill="no"
         android:inputType="number"
         android:maxLength="4"
